# fmp-api-client

./: README.md  pyproject.toml
fmp_api_client/: __init__.py  analyst.py  base.py  client.py  company.py  directory.py  indexes.py  insider_trades.py  market_hours.py  market_performance.py  news.py  quote.py  search.py
scripts/: sync.py
