[project]
name = "fmp-api-client"
version = "0.0.1"
description = "Financial Modeling Prep API, Supports both sync and async"
authors = [
    { name="Stephen Yau", email="softwareentrepreneer+fmp-api-client@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
